﻿drkns 16.04.2016 01:21:23 +0200 - build 4623

1. Рефакторинг и переименования.

w17 14.04.2016 16:24:08 +0300 - build 4622

1. M#3183: Panel FreeInfo, TotalInfo - add options for human-readable format (e.g. "1.375 T" free space)
   Ctrl-Shift-S (M#3089) теперь влияет и на показ общего размера и свободного места в файловой панели.
   Параметр изменился Panel.Info.ShowBytes -> Panel.ShowBytes

zg 14.04.2016 00:25:20 +0200 - build 4621

1. 0003213: Время перерисовки редактора почему-то становится пропорционально размеру файла.

zg 13.04.2016 23:39:18 +0200 - build 4620

1. 0003212: Зависание при вызове ShowHelp/DialogRun после VCTL_QUIT/ECTL_QUIT.

svs 11.04.2016 10:16:53 +0300 - build 4619

1. SQLite 3.12.1

drkns 08.04.2016 16:05:19 +0200 - build 4618

1. С форума: "Где-то портится память и в результате иногда падает."

drkns 06.04.2016 23:43:12 +0200 - build 4617

1. И ещё раз.

drkns 06.04.2016 22:42:14 +0200 - build 4616

1. Fix of fix of 4564.

drkns 06.04.2016 19:41:18 +0200 - build 4615

1. С форума: ANSI плагины потеряли курсор файловой панели (4602).

drkns 06.04.2016 19:17:59 +0200 - build 4614

1. Уточнение 4425.

w17 06.04.2016 18:13:35 +0300 - build 4613

1. Fix 4564.

w17 06.04.2016 13:29:38 +0300 - build 4612

1. M#3200: Неоднообразное поведение по Ctrl+F на "нормальной папке" и на ".."
   [R]Ctrl+[[R]Alt+]F; на ".." теперь не добавляют завершающий '\'

drkns 05.04.2016 21:49:33 +0200 - build 4611

1. При определённых условиях поиск в панели плагина приводил к падению.

2. Пара мелочей.

drkns 03.04.2016 14:37:41 +0200 - build 4610

1. Ещё раз 4609.1.

2. Пара мелочей.

drkns 03.04.2016 00:05:57 +0200 - build 4609

1. С форума: "С некоторых пор описания файлов неожидано стали регистрозависимые".

drkns 31.03.2016 10:00:26 +0200 - build 4608

1. Уточнение 4603. Не показываем "?" если владелец не определён.

2. Прочий мелкий рефакторинг.

drkns 29.03.2016 19:15:04 +0200 - build 4607
