@@ -1,4 +1,8 @@
-﻿drkns 16.04.2016 01:21:23 +0200 - build 4623
+﻿w17 19.04.2016 13:18:14 +0300 - build 4624
+
+1. Уточнение 4622.
+
+drkns 16.04.2016 01:21:23 +0200 - build 4623
 
 1. Рефакторинг и переименования.
 
